# python3-cheatsheet

./: .gitignore  .prettierrc  jupyter-notebook.md  python3-cheatsheet.md
cs50p-2022-introduction-to-programming-with-python/: README.md  main.py  pyproject.toml  requirements-dev.txt
cs50p-2022-introduction-to-programming-with-python/L00_Functions and Variables/: functions-and-variables.ipynb
cs50p-2022-introduction-to-programming-with-python/L01_Conditionals/: conditionals.ipynb
cs50p-2022-introduction-to-programming-with-python/L02 _Loops/: loops.ipynb
cs50p-2022-introduction-to-programming-with-python/L03_Exceptions/: exceptions.ipynb
cs50p-2022-introduction-to-programming-with-python/L04_Libraries/: libraries.ipynb
cs50p-2022-introduction-to-programming-with-python/L05_Unit Tests/: unit-tests.ipynb
cs50p-2022-introduction-to-programming-with-python/L06_File IO/: file-io.ipynb
cs50p-2022-introduction-to-programming-with-python/L07_Regular Expressions/: regular-expressions.ipynb
cs50p-2022-introduction-to-programming-with-python/L08_Object Oriented Programming/: object-oriented-programming.ipynb
cs50p-2022-introduction-to-programming-with-python/L09_Et Cetera/: et-cetera.ipynb
cs50p-2022-introduction-to-programming-with-python/src/week00_functions_variables/: 01_hello_world.py  02_hello_user.py  03_calculator.py  04_functions_p1.py  05_functions_p2.py  06_functions_p3.py  07_functions_p4.py  notes-week00-functions-and-variables.md
cs50p-2022-introduction-to-programming-with-python/src/week01_conditionals/: 01_if_statement.py  04_if_else_with_or.py  (+19 more)
(+39 files in other folders)
